# MGo

./: README.md  index.html  mgo-dev-server.cmd  package-lock.json  package.json  start-mgo.bat  start-mgo.dat.example  start-mgo.sh  vite-plugin-mgo-update.ts  vite-plugin-ts-mime.ts  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: git_update.rs  lib.rs
src/app/: AppLayout.tsx
src/components/: AppVersionBadge.tsx  ErrorBoundary.tsx  FaviconSync.tsx  Logo.tsx  MobileHeader.tsx  PaletteToggle.tsx  SuggestionButton.tsx  ThemeToggle.tsx
src/components/ui/: button.tsx  dialog.tsx  input.tsx  scroll-area.tsx  select.tsx  sheet.tsx  slider.tsx  switch.tsx
src/features/appearance/: PaletteSheet.tsx
src/features/chat/: ChatArea.tsx  ChatHeader.tsx  ChatInput.tsx  MessageBubble.tsx
src/features/conversations/: Sidebar.tsx  UpdateBanner.tsx
src/features/settings/: SettingsDialog.tsx  SettingsPanel.tsx
src/hooks/: useMediaQuery.ts
src/lib/: attachments.ts  modelDisplayName.test.ts  modelDisplayName.ts  modelVision.ts  palette.ts  palettes.ts  persian.ts  persist.ts  theme.ts
src/lib/i18n/: index.ts
src/lib/i18n/locales/: en.json  fa.json
src/lib/lmstudio/: client.ts  modelFilters.ts  resolveUrl.ts  types.ts
src/lib/update/: checkUpdate.ts  config.ts  semver.ts
src/stores/: chatStore.ts  conversationsStore.ts  settingsStore.ts  uiStore.ts  updateStore.ts
src/styles/: palettes.css
